# karaoke271

./: AAX.md  AUv2.md  README.md
my_plugins/: CMakeLists.txt
my_plugins/Karaoke271/: CMakeLists.txt
my_plugins/Karaoke271/image/: checkbox.html
my_plugins/Karaoke271/include/: constants.h  controller.h  id.h  parameter.h  processor.h  version.h
my_plugins/Karaoke271/resource/: Info.plist  main.uidesc
my_plugins/Karaoke271/source/: controller.cpp  factory.cpp  parameter.cpp  processor.cpp
my_plugins/Karaoke271aax/: CMakeLists.txt
my_plugins/Karaoke271aax/source/: aax.cpp
my_plugins/Karaoke271auv2/: CMakeLists.txt  audiounitconfig.h
